# ChangeLog for sys-auth/pam_mysql
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_mysql/ChangeLog,v 1.12 2006/11/23 17:23:59 vivo Exp $

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org>
  pam_mysql-0.7_rc1-r1.ebuild:
  dev-db/mysql => virtual/mysql

  23 Aug 2006; Danny van Dyk <kugelfang@gentoo.org>
  pam_mysql-0.7_rc1-r1.ebuild:
  Forgot to add multilib.eclass to the inherit line.

  10 Aug 2006; Danny van Dyk <kugelfang@gentoo.org>
  pam_mysql-0.7_rc1-r1.ebuild:
  Fixed bug #138986 (multilib-strict).

  15 Jul 2006; Luca Longinotti <chtekk@gentoo.org> -pam_mysql-0.5.ebuild,
  -pam_mysql-0.6.0.ebuild, -pam_mysql-0.7_rc1.ebuild:
  Fix bug #140490.

*pam_mysql-0.7_rc1-r1 (24 Jun 2006)

  24 Jun 2006; Francesco Riosa <vivo@gentoo.org>
  +pam_mysql-0.7_rc1-r1.ebuild:
  Added "openssl" USE flag, add support for md5 and sha1 encryption.
  Fix bug #137806, thanks to the reporter Carsten Tschense.

  19 May 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  pam_mysql-0.7_rc1.ebuild:
  ppc stable, bug #120842

  18 May 2006; Thomas Cort <tcort@gentoo.org> pam_mysql-0.7_rc1.ebuild:
  Stable on alpha wrt security Bug #120842.

  18 May 2006; Mark Loeser <halcy0n@gentoo.org> pam_mysql-0.7_rc1.ebuild:
  Stable on x86; bug #120842

*pam_mysql-0.7_rc1 (10 May 2006)

  10 May 2006; Francesco Riosa <vivo@gentoo.org> -pam_mysql-0.4.7.ebuild,
  +pam_mysql-0.7_rc1.ebuild:
  Version bump, still need to take an in depth look at Bug #120842

  16 Sep 2005; Aron Griffis <agriffis@gentoo.org> pam_mysql-0.5.ebuild:
  Mark 0.5 stable on alpha

*pam_mysql-0.6.0 (04 Jul 2005)

  04 Jul 2005; Martin Schlemmer <azarah@gentoo.org> +pam_mysql-0.6.0.ebuild:
  Update version.  Hopefully fixes bug #49854.

  02 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +pam_mysql-0.4.7.ebuild, +pam_mysql-0.5.ebuild:
  Moved from sys-libs/pam_mysql to sys-auth/pam_mysql.
