@@ -1,6 +1,10 @@
 # ChangeLog for sys-auth/pam_mysql
-# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_mysql/ChangeLog,v 1.12 2006/11/23 17:23:59 vivo Exp $
+# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_mysql/ChangeLog,v 1.13 2007/04/18 18:31:34 opfer Exp $
+
+  18 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
+  pam_mysql-0.7_rc1-r1.ebuild:
+  stable amd64, bug 169985
 
   23 Nov 2006; Francesco Riosa <vivo@gentoo.org>
   pam_mysql-0.7_rc1-r1.ebuild:
